--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+     
     <title>Document</title>
 </head>
 <body>
     
+    <div id="barre-container">
+        <form id="Recherche">
+            <input type="text" id="barreRecherche" placeholder="Rechercher une ville">
+            <button type="submit">Rechercher</button>
+        </form>
+    </div>
+
+    <div id="map"></div>
+
+    <div class="ma carte">
+        <script src="script.js"></script>
+    </div>
 </body>
 </html>
